# simano

./: .gitignore  AUTHORS  INSTALL  Makefile  README  TODO  configure.ac  gnome-autogen.sh  simano.c  simanod.c
android/app/: build.gradle  proguard-rules.pro
android/app/src/androidTest/java/jp/ddo/masm11/simano/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/jp/ddo/masm11/simano/: BootReceiver.java  Log.java  MainActivity.java  PrefActivity.java  PrefFragment.java  SimanoConnection.java  SimanoService.java  SimanoThread.java
android/app/src/main/res/drawable/: launcher.xml  notification.xml
android/app/src/main/res/layout/: activity_main.xml  activity_pref.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/xml/: activity_pref.xml  backupscheme.xml
android/app/src/test/java/jp/ddo/masm11/simano/: ExampleUnitTest.java
client/: AUTHORS  Makefile.am  autogen.sh  config.h.in  configure.ac  simano.c  simano.rb
client/po/: POTFILES.in  ja.po
server/: Makefile  Makefile.am  check.c  check.h  config.h.in  configure.ac  simanod.c  simanod.h  simanod.rb  watch-inotify.c  watch-poll.c  watch-port.c  watch-windows.c  watch.h
